--- a/collections.html
+++ b/collections.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>Movies</title>
-<link rel="stylesheet" type="text/css" href="movies.css">
-
+  <title>Tv Shows</title>
+  <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
-
 <body>
-    <!-- Video Background -->
-    <video autoplay loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+  <div class="video-background">
+    <video autoplay muted loop id="background-video">
+      <source src="background.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
-
-    <!-- Content -->
-    <div class="content">
-        <header>
-                 <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
-            </figure>
-
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="movies.html">Movies</a></li>
-                    <li><a href="TV Shows.html">TV Shows</a></li>
-                    <li><a href="games & apps.html">Games & Apps</a></li>
-                    <li><a href="collections.html">Collections</a></li>
-                    <li><a href="feedback.html">Feedback</a></li>
-                </ul>
-            </nav>
-        </header>
+  </div>
+  <header>
+    <figure>
+      <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
+    </figure>
+    <div class="bx bx-menu" id="menu"></div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="TV Shows.html">TV Shows</a></li>
+        <li><a href="games & apps.html">Games & Apps</a></li>
+        <li><a href="collections.html">Collections</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+      </ul>
+    </nav>
+  </header>
+<section>
+    <h2>Top Movies Action & Horror</h2>
+    <div class="movies">
+      <img src="winchesters.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
+      <img src="twilght.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
+      <img src="Flash.jpg" width="149" alt="Top Movies Action & Horror" height="234">
+      <img src="all.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
+      <img src="NCIS.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
+    </div>
+  </section>
        <div class="section-heading">Top 5 Movies</div>
         <div class="horizontal-container">
             <div class="image-item">
