--- a/collections.html
+++ b/collections.html
@@ -28,15 +28,67 @@
     </nav>
   </header>
 <section>
-    <h2>Top Movies Action & Horror</h2>
+   <h2>Trending Movies</h2>
     <div class="movies">
-      <img src="winchesters.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
-      <img src="twilght.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
-      <img src="Flash.jpg" width="149" alt="Top Movies Action & Horror" height="234">
-      <img src="all.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
-      <img src="NCIS.jpeg" width="149" alt="Top Movies Action & Horror" height="234">
+      <a href="king kong.html"><img src="king%20kong.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="joker.html"><img src="joker.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="kung fu panda.html"><img src="kung%20fu.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="bee.html"><img src="bee.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="blue.html"><img src="blue.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="nun.html"><img src="nun.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="man.html"><img src="monkey.jpeg" width="149" alt="Trending Movies" height="234"></a>
     </div>
   </section>
+
+  <section>
+    <h2>New Movies</h2>
+    <div class="movies">
+      <a href="equal.html"><img src="equal.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="expend.html"><img src="expend.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="dune.html"><img src="dune.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="vol3.html"><img src="vol 3.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="deadpool.html"><img src="deadpool.jpeg" width="149" alt="New Movies" height="234"></a>
+      <a href="john.html"><img src="john.jpeg" width="149" alt="New Movies" height="234"></a>
+      <a href="sisu.html"><img src="sisu.jpeg" width="149" alt="New Movies" height="234"></a> 
+      <a href="dead.html"><img src="dead.jpeg" width="149" alt="New Movies" height="234"> </a>
+    </div>
+  </section>
+
+  <section>
+    <h2>Hot Movies</h2>
+    <div class="movies">
+      <a href="red.html"><img src="red-notice-banner.jpg" width="149" alt="Hot Movies" height="234"></a>
+      <a href="lift.html"><img src="lift.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="jumanji.html"><img src="jumanji.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="meg.html"><<img src="meg.jpeg" width="149" alt="Hot Movies" height="234"></a>
+      <a href="mother.html"><img src="acti.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="romance.html"><img src="romance.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="boy.html"><img src="the boy.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="love.html"><img src="love.jpeg"  width="149" alt="Hot Movies" height="234"></a>  
+    </div>   
+  <section>
+     <section>
+    <h2>Trending</h2>
+    <div class="movies">
+      <img src="intse.jpeg"  width="149" alt="Trending" height="234">
+      <img src="jack.jpeg"  width="149" alt="Trending" height="234">
+      <img src="power.jpeg"  width="149" alt="Trending" height="234">
+      <img src="tom.jpeg"  width="149" alt="Trending" height="234">
+      <img src="zig.jpeg" width="149" alt="Trending" height="234">
+    </div>
+  </section>
+
+  <section>
+    <h2>New Series</h2>
+    <div class="movies">
+      <img src="bel.jpeg" width="149" alt="New Series" height="234">
+      <img src="game.jpeg"  width="149" alt="New Series" height="234">
+      <img src="the.jpeg"  width="149" alt="New Series" height="234">
+      <img src="arrow.jpeg" width="149" alt="New Series" height="234">
+      <img src="911.jpeg"  width="149" alt="New Series" height="234">
+    </div>
+  </section>
+  
        <div class="section-heading">Top 5 Movies</div>
         <div class="horizontal-container">
             <div class="image-item">
