--- a/collections.html
+++ b/collections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tv Shows</title>
+  <title>Collection</title>
   <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
 <body>
@@ -77,7 +77,16 @@
       <img src="zig.jpeg" width="149" alt="Trending" height="234">
     </div>
   </section>
-
+ <section>
+    <h2>What's Hot</h2>
+    <div class="movies">
+      <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
+      <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
+      <img src="Flash.jpg" width="149" alt="What's Hot Movie 3" height="234">
+      <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
+      <img src="NCIS.jpeg" width="149" alt="What's Hot Movie 5" height="234">
+    </div>
+  </section>
   <section>
     <h2>New Series</h2>
     <div class="movies">
@@ -89,110 +98,6 @@
     </div>
   </section>
   
-       <div class="section-heading">Top 5 Movies</div>
-        <div class="horizontal-container">
-            <div class="image-item">
-                <a href="king kong.html"><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149"></a>
-                <div class="image-title">King-Kong vs Godzilla</div>
-            </div>
-            <div class="image-item">
-                <a href="joker.html"><img alt="joker" height="234" src="joker.jpeg" width="149"></a>
-                <div class="image-title">The Joker</div>
-            </div>
-            <div class="image-item">
-                <a href="kung fu panda.html"><img alt="kung" height="234" src="kung%20fu.jpeg" width="149"></a>
-                <div class="image-title">The Kung Fu Panda 4</div>
-            </div>
-            <div class="image-item">
-                <a href="bee.html"><img alt="Bee" height="234" src="bee.jpeg" width="143"></a>
-                <div class="image-title">The Beekeeper</div>
-            </div>
-            <div class="image-item">
-                <a href="blue.html"> <img alt="blue" height="234" src="blue.jpeg" width="149"></a>
-                <div class="image-title">Blue Bettle</div>
-            </div>
-            <div class="image-item">
-                <a href="equal.html"><img alt="equal" height="234" src="equal.jpeg" width="149"></a>
-                <div class="image-title">The Equalizer 3</div>
-            </div>
-            <div class="image-item">
-                <a href="red.html"><img alt="red-notice-banner.jpg" height="234" src="red-notice-banner.jpg" width="149"></a>
-                <div class="image-title">TheRed Notice </div>
-            </div>
-            <div class="image-item">
-                <a href="lift.html"><img alt="lift.jpeg" height="234" src="lift.jpeg" width="149"></a>
-                <div class="image-title">The Lift</div>
-            </div>
-            <div class ="section-heading">Top 5 Games and Apps</div>
-            <div class="image-item">
-                <a href="froza.html"><img alt="froza" height="234" src="froza.jpeg" width="149"></a>
-                <div class="image-title">Froza Horizon 5</div>
-            </div>
-            <div class="image-item">
-                <a href="dune.html"><img alt="dune.jpeg" height="234" src="dune.jpeg" width="149"></a>
-                <div class="image-title">The Dune</div>
-            </div>
-            <div class="image-item">
-                <a href="flash.html"><img alt="Flash.jpg" height="234" src="Flash.jpg" width="149"></a>
-                <div class="image-title">The Flash</div>
-            </div>
-            <div class="image-item">
-                <a href="jumanji.html"><img alt="jumanji.jpeg" height="234" src="jumanji.jpeg" width="149"></a>
-                <div class="image-title">Jumanji To The Next Level</div>
-            </div>
-            <div class="image-item">
-                <a href="meg.html"><img alt="meg.jpeg" height="234" src="meg.jpeg" width="149"></a>
-                <div class="image-title">The Meg 2</div>
-            </div>
-            <div class="image-item">
-                <a href="vol3.html"><img alt="vol 3.jpeg" height="234" src="vol 3.jpeg" width="149"></a>
-                <div class="image-title">Guardians of the Galaxy Vol. 3</div>
-            </div>
-            <div class="image-item">
-                <a href="mother.html"><img alt="acti.jpeg" height="234" src="acti.jpeg" width="149"></a>
-                <div class="image-title">The Mother</div>
-            </div>
-            <div class="image-item">
-                <a href="deadpool.html"><img alt="deadpool.jpeg" height="234" src="deadpool.jpeg" width="149"></a>
-                <div class="image-title">The Deadpool</div>
-            </div>
-            <div class="image-item">
-                <a href="dead.html"><img alt="dead.jpeg" height="234" src="dead.jpeg" width="149"></a>
-                <div class="image-title">The Deadshot</div>
-            </div>
-            <div class="image-item">
-                <a href="john.html"><img alt="john.jpeg" height="234" src="john.jpeg" width="149"></a>
-                <div class="image-title">The John Wick Chapter 4</div>
-            </div>
-            <div class="section-heading">Top Tv Shows</div>
-            <div class="image-item">
-                <a href="man.html"><img alt="monkey.jpeg" height="234" src="monkey.jpeg" width="149"></a>
-                <div class="image-title">The Monkey Man</div>
-            </div>
-            <div class="image-item">
-                <a href="nun.html"><img alt="nun.jpeg" height="234" src="nun.jpeg" width="149"></a>
-                <div class="image-title">The Nun II</div>
-            </div>
-            <div class="image-item">
-                <a href="love.html"><img alt="love.jpeg" height="234" src="love.jpeg" width="149"></a>
-                <div class="image-title">Love and Love Not</div>
-            </div>
-            <div class="image-item">
-                <a href="boy.html"><img alt="the boy.jpeg" height="234" src="the boy.jpeg" width="149"></a>
-                <div class="image-title">The Boy Next Door</div>
-            </div>
-            <div class="image-item">
-                <a href="sisu.html"><img alt="sisu.jpeg" height="234" src="sisu.jpeg" width="149"></a>
-                <div class="image-title">The Sisu</div>
-            </div>
-            <div class="image-item">
-                <a href="romance.html"><img alt="romance.jpeg" height="234" src="romance.jpeg" width="149"></a>
-                <div class="image-title">No Hard Feelings</div>
-            </div>
-        </div>
-
-    </div>
-
     <footer>
         <ul class="social-media-icons">
            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
