Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -52,6 +52,26 @@
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
   </section>
+  <section>
+    <h2>Pc Games</h2>
+    <div class="movies">
+       <a href="froza.html"><img src="froza.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="blur.html"><img src="blur.png" width="149" alt="Pc Games" height="234"></a>
+       <a href="fifa22.html"><img src="fifa22.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="call.html"><img src="call of duty.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="nfs.html"><img src="ned.jpeg" width="149" alt="Pc Games" height="234"></a>
+    </div>
+  </section>
+ <section>
+    <h2>Apps</h2>
+    <div class="movies">
+      <img src="spotify.png"  width="149" alt="Apps" height="234">
+      <img src="TWITTER.jpeg"  width="149" alt="Apps" height="234">
+      <img src="TIKTOK.jpeg"  width="149" alt="Apps" height="234">
+      <img src="IG.png"  width="149" alt="Apps" height="234">
+      <img src="drive.jpeg" width="149" alt="Apps" height="234">
+    </div>
+  </section>
         <!-- Game List -->
         <div class="game-list">
             <figure class="game-image">
