--- a/games & apps.html
+++ b/games & apps.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="mySlides fade">
-      <img src="TWITTER.jpg">
+      <img src="TWITTER.jpeg">
       <h1>Twitter<br>Mobile Games & Apps</h1>
     </div>
 
