--- a/blur.html
+++ b/blur.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>Games & Apps</title>
-   <link rel="stylesheet" type="text/css" href="froza.css">
+  <title>Tv Shows</title>
+  <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
-
 <body>
-    <!-- Video Background -->
-    <video autoplay loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+  <div class="video-background">
+    <video autoplay muted loop id="background-video">
+      <source src="background.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
-
-    <!-- Content -->
-    <header>
-         <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Movies.html">Movies</a></li>
-                <li><a href="TV Shows.html">TV Shows</a></li>
-                <li><a href="games & apps.html">Games & Apps</a></li>
-                <li><a href="collections.html">Collections</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-            </ul>
-        </nav>
-    </header>
+  </div>
+  <header>
+    <figure>
+      <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
+    </figure>
+    <div class="bx bx-menu" id="menu"></div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="TV Shows.html">TV Shows</a></li>
+        <li><a href="games & apps.html">Games & Apps</a></li>
+        <li><a href="collections.html">Collections</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+      </ul>
+    </nav>
+  </header>
 
     <div class="image-grid">
         <div class="image-item">
@@ -43,7 +42,9 @@
             <p>Dedicated Video RAM: 4096 MB</p>
             <p>Pixel Shader: 5.1, Vertex Shader: 5.1</p>
             <p>More information</p>
-            <p>Blur is a game completely focused on making racing fun again. Everything the player does, both in their cars and with their cars, is a dramatic adrenaline rush. Up to 20 cars on a track will battle each other as they trade paint, attempt hair-raising jumps, take shortcuts and collect power-ups, including the ability to boost their speed or blast other cars out of the way with huge bursts of energy. Developed by Bizarre Creations, the creators of the Project Gotham Racing series, Blur is out now for PC, PlayStation 3 and Xbox 360. www.blurthegame.com</p>
+            <p>Gameplay</p>
+             <p>Arcade Racing: "Blur" offers a mix of traditional racing and combat elements. Players can pick up various power-ups scattered across the tracks, which can be used to attack opponents, defend against attacks, or boost their own performance.</p>
+            <p>Blur" is an arcade-style racing game developed by Bizarre Creations and published by Activision. It was released for PlayStation 3, Xbox 360, and PC in May 2010. Known for its fast-paced gameplay and visually striking graphics, "Blur" combines realistic car models and environments with over-the-top power-ups and combat racing mechanics</p>
         </div>
     </div>
 </body>
