--- a/blur.html
+++ b/blur.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tv Shows</title>
+  <title>Blur</title>
   <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
 <body>
