--- a/froza.html
+++ b/froza.html
@@ -30,7 +30,7 @@
 
     <div class="image-grid">
         <div class="image-item">
-            <img alt="Froza 5" src="froza.jpeg">
+            <img alt="Froza 5" width="650" src="froza.jpeg" height="950">
             <div class="image-title">Forza Horizon 5</div>
         </div>
         <div class="about">
