--- a/collections.html
+++ b/collections.html
@@ -97,7 +97,41 @@
       <img src="911.jpeg"  width="149" alt="New Series" height="234">
     </div>
   </section>
-  
+   <h2>Pc Games</h2>
+    <div class="movies">
+       <a href="froza.html"><img src="froza.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="blur.html"><img src="blur.png" width="149" alt="Pc Games" height="234"></a>
+       <a href="fifa22.html"><img src="fifa22.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="call.html"><img src="call of duty.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="nfs.html"><img src="ned.jpeg" width="149" alt="Pc Games" height="234"></a>
+    </div>
+  </section>
+ <section>
+    <h2>Apps</h2>
+    <div class="movies">
+      <img src="spotify.png"  width="149" alt="Apps" height="234">
+      <img src="TWITTER.jpeg"  width="149" alt="Apps" height="234">
+      <img src="TIKTOK.jpeg"  width="149" alt="Apps" height="234">
+      <img src="IG.png"  width="149" alt="Apps" height="234">
+      <img src="drive.jpeg" width="149" alt="Apps" height="234">
+      <img src="indr.jpeg" width="149" alt="Apps" height="234">
+      <img src="facebook.jpeg" width="149" alt="Apps" height="234">
+      <img src="bible.jpeg" width="149" alt="Apps" height="234">
+      <img src="pdf.jpeg" width="149" alt="Apps" height="234">
+      <img src="foxit.jpeg" width="149" alt="Apps" height="234">
+    </div>
+  </section>
+   
+  <h2>Mobile Gaming</h2>
+    <div class="movies">
+      <img src="dr.jpeg"  width="149" alt="Mobile Gaming" height="234">
+      <img src="football.jpeg"  width="149" alt="Mobile Gaming" height="234">
+      <img src="nfsr.jpeg"  width="149" alt="Mobile Gaming" height="234">
+      <img src="payback.jpeg"  width="149" alt="Mobile Gaming" height="234">
+      <img src="sub.jpeg" width="149" alt="Mobile Gaming" height="234">
+      <img src="candy.jpeg" width="149" alt="Mobile Gaming" height="234">
+    </div>
+  </section>
     <footer>
         <ul class="social-media-icons">
            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
