--- a/collections.html
+++ b/collections.html
@@ -81,8 +81,8 @@
     <h2>What's Hot</h2>
     <div class="movies">
       <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
-      <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
-      <img src="Flash.jpg" width="149" alt="What's Hot Movie 3" height="234">
+      <a href="twilight.html"><img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234"></a>
+      <a href="flash.html"><img src="Flash.jpg" width="149" alt="What's Hot Movie 3" height="234"></a>
       <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
       <img src="NCIS.jpeg" width="149" alt="What's Hot Movie 5" height="234">
     </div>
@@ -90,11 +90,11 @@
   <section>
     <h2>New Series</h2>
     <div class="movies">
-      <img src="bel.jpeg" width="149" alt="New Series" height="234">
+      <a href="bel.html"><img src="bel.jpeg" width="149" alt="New Series" height="234"></a>
       <img src="game.jpeg"  width="149" alt="New Series" height="234">
       <img src="the.jpeg"  width="149" alt="New Series" height="234">
-      <img src="arrow.jpeg" width="149" alt="New Series" height="234">
-      <img src="911.jpeg"  width="149" alt="New Series" height="234">
+      <a href="arrow.html"><img src="arrow.jpeg" width="149" alt="New Series" height="234"></a>
+      <a href="911.html"><img src="911.jpeg"  width="149" alt="New Series" height="234"></a>
     </div>
   </section>
    <h2>Pc Games</h2>
